# cytodata-hackathon-base

./: .gitignore  .serotiny  README.md  pyproject.toml  requirements.txt
Cytodata_DINO/: config.yaml  file_dataset.py  label_dict.py  main_dino.py  pipreqs_requirements.txt  run_dino.py  run_end_to_end.py  run_get_features.py  utils.py
cellfie/: get_data.ipynb  preprocessing.ipynb
cytodata_aics/: io_utils.py  model_utils.py  vae_utils.py
cytodata_aics/config/: predict.yaml
cytodata_aics/config/data/: example_dataloader_2d.yaml  example_dataloader_3d.yaml  example_vae_dataloader_2d.yaml  example_vae_dataloader_3d.yaml
cytodata_aics/config/mlflow/: default.yaml  internal_mlflow.yaml
cytodata_aics/config/model/: example_classifier_2d.yaml  example_classifier_3d.yaml  example_vae_2d.yaml  example_vae_3d.yaml
cytodata_aics/config/trainer/: default.yaml
cytodata_aics/config/trainer/callbacks/: vae.yaml
data/: mitocells_truncated.csv
notebooks/: Add2DShapeProps.ipynb  AddTexture.ipynb  Appendix 1 - Creating your own Cell Metrics.ipynb  Appendix 2 - Creating a Variational Autoencoder from image data.ipynb  Appendix 3 - Data augmentation and resizing 3D images.ipynb  Chapter 1 - Introduction to the cells and images.ipynb  Chapter 2 - Accessing the dataset.ipynb  Chapter 3 - Visualizing the cell image data.ipynb  Chapter 4 - Visualizing and analyzing cell metric data.ipynb  Chapter 5 - Training ML models with Serotiny.ipynb  Chapter 6 - Explaining the challenge task.ipynb  Chapter2_Template.ipynb  ParallelizationSetup.ipynb  Pre-Processing Notebook.ipynb  Prologue - Welcome to the dry-run hackathon.ipynb  data_access_example.ipynb  metric_exploration_example.ipynb  viz_utils.py
notebooks/ch5_attempt1/: .serotiny  README.md  pyproject.toml
notebooks/ch5_attempt1/ch5_attempt1/: model.py
notebooks/ch5_attempt1/ch5_attempt1/config/: hydra.yaml  test.yaml  train.yaml
notebooks/ch5_attempt1/ch5_attempt1/config/data/: class2d_data.yaml  default.yaml
notebooks/ch5_attempt1/ch5_attempt1/config/mlflow/: class2d_mlflow.yaml
notebooks/ch5_attempt1/ch5_attempt1/config/model/: class2d_model.yaml
notebooks/resources/: Cytodata 2022 Hackathon Chapter 2 Columns - main_dataframe (3).csv  cell_line_annotation.txt  colid_desc.txt  colname_test.csv  cytodata_column_manifest.csv  cytodata_column_manifest_092122.csv  draft_plus_human_mito_annotations.csv  hackathon_column_descriptions.csv  updatedEDGEcalls_22020914.csv
