[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cytodata_aics"
version = "0.0.0"
authors = []
description = "A base repo to get hackathon participants started"
readme = "README.md"
packages = [
    { include = "cytodata_aics" },
]
include = [
    "LICENSE",
    "**/*.yaml",
    "**/*.json",
    ".serotiny"
]
exclude = [
    "**/*.pyc",
    "**/__pycache__"
]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8"
poethepoet = "^0.10.0"
serotiny = {git = "https://github.com/allencell/serotiny.git", branch = "tag/cytodata"}

[tool.poe.tasks]
force-cuda101 = "python -m pip install --force-reinstall 'torch>=1.8.1+cu101' -f https://download.pytorch.org/whl/cu101/torch_stable.html"
force-cuda116 = "python -m pip install --force-reinstall --pre 'torch>=1.8.0+cu116' --extra-index-url https://download.pytorch.org/whl/nightly/cu116"


[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[tool.poetry.extras]


[tool.flake8]
ignore = [
	"E203",
	"E402",
	"W291",
	"W503"
]
max-line-length = 88
